reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_one_basic_field_string.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "super::into_input_schema::<TestStructOneBasicFieldString>().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "id": {
        "kind": "Struct",
        "path": [
          "reflectapi::Empty"
        ],
        "disambiguator": 0
      },
      "name": "reflectapi::Empty",
      "description": "Struct object with no fields",
      "fields": "none"
    },
    {
      "kind": "struct",
      "id": {
        "kind": "Struct",
        "path": [
          "TestStructOneBasicFieldString"
        ],
        "disambiguator": 0
      },
      "name": "reflectapi_demo::tests::basic::TestStructOneBasicFieldString",
      "fields": {
        "named": [
          {
            "id": {
              "kind": "Field",
              "path": [
                "_f"
              ],
              "disambiguator": 0
            },
            "name": "_f",
            "type": {
              "name": "std::string::String"
            },
            "required": true
          }
        ]
      }
    },
    {
      "kind": "primitive",
      "id": {
        "kind": "Primitive",
        "path": [
          "std::string::String"
        ],
        "disambiguator": 0
      },
      "name": "std::string::String",
      "description": "UTF-8 encoded string"
    }
  ]
}
